--- a/configuration.yaml
+++ b/configuration.yaml
@@ -64,9 +64,6 @@ remote:
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
-# Show the introduction message on startup.
-introduction:
-
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
 #   base_url: example.duckdns.org:8123
@@ -81,7 +78,7 @@ sensor:
 
 # Text to speech
 tts:
-  - platform: google
+  - platform: google_translate
 
 group: !include groups.yaml
 automation: !include automations.yaml
